# daily-mcp

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docs/: architecture.md  configuration.md  development.md  features.md  mcp-protocol.md
src/daily_mcp/: __init__.py  __main__.py  db.py  handlers.py  logging.py  prompts.py  resources.py  schemas.py  server.py
src/daily_mcp/tools/: __init__.py  daily_log.py  diary.py  finance.py  health.py  time_utils.py  todo.py
tests/: __init__.py  conftest.py  test_daily_log.py  test_diary.py  test_finance.py  test_health.py  test_time_utils.py  test_todo.py
